--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,4 +22,4 @@ jobs:
           luacheck --version
           echo "##[endgroup]"
       - name: luacheck
-        run: luacheck -- ClassicLootManager/ ClassicLootManager_Alerts/ ClassicLootManager_Integrations/
+        run: luacheck
